<resources>
    <string name="app_name" translatable="false">VayH</string>
    <string name="loading">loading…</string>
    <string name="net_error">Please check if your network status is good</string>
    <string name="welcome_to_app">Welcome to %1$s</string>
    <string name="login_invalid_phone_hint">If your phone number is invalid, click here to modify it.</string>
    <string name="lets_go">Let\'s go</string>
    <string name="phone_number_required">Please enter your phone number.</string>
    <string name="invalid_phone_number_format">Error: Invalid phone number format.</string>
    <string name="verification_code_required">Please enter the verification code.</string>
    <string name="resend_after">Resend after %1$ss</string>
    <string name="resend_after_short">%1$ss</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="get_otp">Get</string>
    <string name="verification_code_sent">We have sent a verification code to %1$s.\nPlease enter the code to verify your account.</string>
    <string name="login_prompt_title">Login to use more features</string>
    <string name="login_prompt_description">Continue without login?</string>
    <string name="login_now">Login Now</string>
    <string name="reject">Reject</string>
    <string name="agree">Agree</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_toast_agree2">Please consent to the Privacy Policy and Service Agreement</string>
    <string name="home">Home</string>
    <string name="order">Calculator</string>
    <string name="Taborder">Order</string>
    <string name="stats">Tips</string>
    <string name="mine">Profile</string>
    <string name="tab_mine">Mine</string>
    <string name="again_exit">Press again to exit the app.</string>
    <string name="otp_enter">Enter OTP</string>
    <string name="accept_policy">I have read and accepted the %s and %s</string>
    <string name="privacy_agreement">Privacy Policy</string>
    <string name="privacy_blue">Service Agreement</string>
    <string name="retry">Retry</string>
    <string name="authenticate">Login</string>
    <string name="sure_logout">Are you sure you want to log out of the app?</string>
    <string name="new_version">New version</string>
    <string name="new_version_desc">The version is too low, please update</string>
    <string name="update">Update</string>
    <string name="under_18">You are under 18 years old.</string>
    <string name="id_number_error">The ID card number is incorrect.</string>
    <string name="dialog_permission_title">Please enable [%s] permission in the settings to continue using the app!</string>
    <string name="dialog_permission_phone">phone</string>
    <string name="dialog_permission_calendar">calendar</string>
    <string name="dialog_permission_location">location</string>
    <string name="dialog_permission_notification">Notification</string>
    <string name="please_sign">Please sign.</string>
    <string name="camera_str">Camera</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="complete">Complete</string>
    <string name="closed">Closed</string>
    <string name="sure">Sure</string>
    <string name="certification">Certification</string>
    <string name="order_center">Order Center</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="contact_support">Contact Support</string>
    <string name="mine_share_arrow">→</string>
    <string name="current_version">Current Version</string>
    <string name="version_value">V%1$s</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_title">Are you sure you want to close your account?</string>
    <string name="delete_account_description">After closing your account, all your plans will be permanently removed.\n\nyou can register again using the same mobile number, but your previous records will not be restored.\n\n</string>
    <string name="log_out">Log Out</string>
    <string name="account_rating_title">Enjoying the app?</string>
    <string name="account_rating_prompt">Please rate %1$s&#10;5 stars</string>
    <string name="rate">Rate</string>
    <string name="about_us">About Us</string>
    <string name="quick_repayment">Quick repayment</string>
    <string name="pay_back_now">Pay back now</string>
    <string name="contact_detail">Contact Details</string>
    <string name="contact_detail_desc">We will help you with any problems you encounter while using the app. You can contact us through the following contact information</string>
    <string name="phone_number">Phone Number</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="copy">Copy</string>
    <string name="telegram">Telegram</string>
    <string name="copy_success">Copied successfully</string>
    <string name="close_account">Close Account</string>
    <string name="feedback">Feedback</string>
    <string name="signOut">Logout</string>
    <string name="data_has_deleted">Data has been deleted!</string>
    <string name="submit">Submit</string>
    <string name="enter_feedback">Please enter your feedback</string>
    <string name="feedback_success">Feedback submitted successfully.</string>
    <string name="close_app_name">App name</string>
    <string name="account_number">Account number</string>
    <string name="close_account_tips">After close account ，we will clear all your data and you will no longer be able to use your current account again</string>
    <string name="close_account_reason">Please select the reason for close account and logging out</string>
    <string name="close_account_reason1">Not recognizing loan products</string>
    <string name="close_account_reason2">Cancel excess accounts</string>
    <string name="close_account_reason3">No demand for use</string>
    <string name="close_account_reason4">Others</string>
    <string name="message">Message</string>
    <string name="empty_message">No message</string>
    <string name="empty_data">No data</string>
    <string name="message_content">Message Content</string>
    <string name="account_receivable">Accounts receivable</string>
    <string name="account_receivable_tips">Add or delete transaction account</string>
    <string name="empty_bankcard">No Accounts Receivable, please complete the information and evaluate the credit value</string>
    <string name="add_account_receivable">Add Collection Account</string>
    <string name="toast_add_account_receivable">Collection account added successfully!</string>
    <string name="default_str">Default</string>
    <string name="untie">Untie</string>
    <string name="unbind">Unbind</string>
    <string name="unbind_desc">Make sure you want to unbind the electronic wallet</string>
    <string name="set_default_title">Set default electronic wallet</string>
    <string name="set_default_desc">Set as default electronic wallet , we will transfer your loan to this account</string>
    <string name="order_empty">Unborrowed products, please submit a loan application</string>
    <string name="order_detail">Order Details</string>
    <string name="order_information">Order Information</string>
    <string name="fee_breakdown">Fee Breakdown</string>
    <string name="amount_details">Amount Details</string>
    <string name="total_repayment_str">Total repayment(%s)</string>
    <string name="order_no">Order number</string>
    <string name="order_status">Order status</string>
    <string name="loan_date">Loan Date</string>
    <string name="loan_amount">Loan Amount(%s)</string>
    <string name="l_amount">Loan Amount</string>
    <string name="annual_rate">Annual interest rate</string>
    <string name="days">Days</string>
    <string name="bank_card">Bank Card</string>
    <string name="bank_account">Bank Account</string>
    <string name="confirm_bank_account">Confirm account number</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="withdraw_method">Withdraw method</string>
    <string name="please_select">Please select</string>
    <string name="select_withdraw_method">Select withdraw method</string>
    <string name="first_name">First name</string>
    <string name="confirm_account_number">Confirm account number</string>
    <string name="please_choose_wallet">Please choose an E-Wallet</string>
    <string name="please_enter_wallet_account">Please enter the account number</string>
    <string name="wallet_account_not_match">The account numbers do not match.</string>
    <string name="cardholder_name">Cardholder\'s name</string>
    <string name="please_choose_bank">Please choose a bank</string>
    <string name="please_enter_holder_name">Please enter the Cardholder\'s name</string>
    <string name="please_enter_bank_account">Please enter the bank account</string>
    <string name="bank_account_not_match">The bank account do not match.</string>
    <string name="personal_info">Personal information</string>
    <string name="last_name">Last name</string>
    <string name="id_card_number">Identity card number</string>
    <string name="please_enter_current_info">Please enter the correct information</string>
    <string name="please_choose_current_info">Please choose the correct information</string>
    <string name="gender">Gender</string>
    <string name="please_choose_gender">Please choose gender</string>
    <string name="please_choose">please choose</string>
    <string name="please_enter">Please enter</string>
    <string name="please_enter_name">Please enter the name</string>
    <string name="please_enter_last_name">Please enter your last name</string>
    <string name="please_enter_first_name">Please enter your first name</string>
    <string name="please_enter_id_card">Please enter your ID number</string>
    <string name="monthly_salary">Monthly salary</string>
    <string name="please_enter_monthly">please enter the monthly salary</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="please_choose_date_of_birth">Please choose your date of birth</string>
    <string name="education">Education</string>
    <string name="please_choose_education">Please choose education</string>
    <string name="industry">Industry</string>
    <string name="please_choose_industry">Please choose industry</string>
    <string name="work_time">Work time</string>
    <string name="please_choose_profession">Please choose profession</string>
    <string name="please_choose_work_time">Please choose work time</string>
    <string name="loan_purpose">Reason for loan</string>
    <string name="please_choose_loan_purpose">Please choose a reason for loan</string>
    <string name="marry_status">Marital status</string>
    <string name="please_choose_marital_status">Please choose marital status</string>
    <string name="province_city_town">Province/City/Town</string>
    <string name="please_choose_province_city_town">Please choose province, city and town</string>
    <string name="residential_address_hint">Please enter your detailed address</string>
    <string name="bank_tips">Please fill in the correct bank account of your chosen bank, bank mismatch or account error will cause the loan to fail.</string>
    <string name="detail_address">Detailed address</string>
    <string name="profession">Profession</string>
    <string name="calculator_set_salary">Set your salary</string>
    <string name="calculator_monthly_salary_input">Monthly Salary(₱)</string>
    <string name="calculator_working_days">Working Days</string>
    <string name="calculator_hours_per_day">How many hours a day</string>
    <string name="calculator_payday">Payday</string>
    <string name="calculator_work_location">Work location</string>
    <string name="calculator_save">Save</string>
</resources>