<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_color1">

    <com.velora.portal.core.ui.component.PageHeaderView
        android:id="@+id/applicant_details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:centerText="@string/personal_info"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/page_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_15"
        app:layout_constraintBottom_toTopOf="@id/applicant_submit_bar"
        app:layout_constraintTop_toBottomOf="@id/applicant_details_header">

        <FrameLayout
            android:id="@+id/page_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/applicant_form_scroll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:fillViewport="true"
                android:overScrollMode="never"
                android:paddingBottom="@dimen/dp_24">

            <com.velora.portal.core.ui.component.StyledLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:orientation="vertical"
                app:radius="@dimen/dp_12"
                app:solidColor="@color/text_inverse">
                <com.velora.portal.core.ui.component.StyledTextView
                   style="@style/TypeTag"
                    android:text="@string/personal_info" />
                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_family_name"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_enter_last_name"
                    app:formType="input"
                    app:hintText="@string/please_enter_name"
                    app:inputType="text"
                    app:titleText="@string/last_name" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_given_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_enter_first_name"
                    app:formType="input"
                    app:hintText="@string/please_enter_name"
                    app:inputType="text"
                    app:titleText="@string/first_name" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_gender_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_gender"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:inputType="text"
                    app:titleText="@string/gender" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_date_of_birth"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:inputType="text"
                    app:titleText="@string/date_of_birth" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_identity_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:editMaxLength="30"
                    app:errorText="@string/please_enter_current_info"
                    app:formType="input"
                    app:hintText="@string/please_enter_id_card"
                    app:inputType="text"
                    app:titleText="@string/id_card_number" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_education_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_education"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:titleText="@string/education" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_employment_industry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_industry"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:titleText="@string/industry" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_job_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_profession"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:titleText="@string/profession" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_employment_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_work_time"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:titleText="@string/work_time" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_loan_purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_loan_purpose"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:titleText="@string/loan_purpose" />

                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_monthly_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_enter_monthly"
                    app:formType="input"
                    app:hintText="@string/please_enter_monthly"
                    app:inputType="number"
                    app:titleText="@string/monthly_salary" />

                <!-- Marital status -->
                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_marital_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_marital_status"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:titleText="@string/marry_status" />

                <!-- Province / city -->
                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_residential_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/please_choose_province_city_town"
                    app:formType="select"
                    app:hintText="@string/please_choose"
                    app:titleText="@string/province_city_town" />

                <!-- Address -->
                <com.velora.portal.core.ui.component.FormItemView
                    android:id="@+id/field_street_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@string/residential_address_hint"
                    app:formType="input"
                    app:hintText="@string/residential_address_hint"
                    app:inputType="text"
                    app:titleText="@string/detail_address" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_18" />
            </com.velora.portal.core.ui.component.StyledLinearLayout>

            </androidx.core.widget.NestedScrollView>
            </LinearLayout>
        </FrameLayout>

        <com.velora.portal.core.ui.component.PageStateOverlayView
            android:id="@+id/pageState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/applicant_submit_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <com.velora.portal.core.ui.component.StyledTextView
            style="@style/AuthDataEncryptedTipText"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_10" />

        <com.velora.portal.core.ui.component.StatefulActionButton
            android:id="@+id/btn_submit_applicant_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:text="@string/next"
            app:actionButtonVariant="filled" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
